# binderdesign_cuilab

./: .gitignore  README.md  pyproject.toml
binderdesign-cuilab/: common.py  geometry.py  project.py
binderdesign_cuilab/: __init__.py  cli.py  structure.py  table.py  tasks.py
configs/: 2efl_headtail.txt  2efl_sideside_A140_A179.txt  2efl_sideside_A85_A101.txt
images/: rfd.def
parent/: 2efl.pdb1.head
parent_pdb/: 2efl.pdb1
rosetta/: relax_interface.xml  repack_interface.xml
scripts/: bootstrap_local.ps1  bootstrap_local.sh  run_diffusion.sh
scripts/marlowe/: aggregate_robustness.sh  common.sh  run_alphafold_array.sh  run_geometry_array.sh  run_light_qc_array.sh  run_proteinmpnn_array.sh  run_rfdiffusion_array.sh  run_rosetta_ddg_array.sh  run_rosetta_fastrelax_array.sh  run_rosetta_interface_array.sh
sidechain_restore/: README.md  sidechain_restore.py
sidechain_restore/collision/: __init__.py  align.py  config.py  pdbio.py  restore.py
triage/: README.md  triage_restore.py
triage/helix/: __init__.py  config.py  geom.py  helix.py  pdbio.py  triage.py
